--- a/cn.puma.www/index.html
+++ b/cn.puma.www/index.html
@@ -184,7 +184,7 @@
 
         <!-- 限定篮球鞋 -->
         <div class="activiss" id="main-3">
-            <a href="">
+            <a href="./floods.html">
                 <img src="./image/index/activity03.jpg" alt="">
             </a>
             <!-- 男子黄色体恤左边导航  -->
