--- a/cn.puma.www/obscene.html
+++ b/cn.puma.www/obscene.html
@@ -139,18 +139,18 @@
         <!--产品查看 -->
         <div class="pdp-all">
             <div class="productDetail">
-                <h1>SKY MODERN EASTER </h1>
-                <h2>男子篮球鞋</h2>
+                <h1>PUMA X TH TEE </h1>
+                <h2>男子短袖T恤</h2>
                 <p class="skuCode">
-                    产品编号：<span>19404301</span>
+                    产品编号：<span>59675025</span>
                 </p>
                 <div class="pricebox">
-                    <div class="salePrice">¥969.00</div>
+                    <div class="salePrice">¥399.00</div>
                 </div>
                 <div class="color-box">
                     <ul>
                         <li class="selected">
-                            <img src="./image/floods/selected01.jpg" alt="">
+                            <img src="./image/obscene/selected01.jpg" alt="">
                         </li>
                         <p></p>
                     </ul>
@@ -159,19 +159,20 @@
                 <div class="selectbox">
                     <span class="select-label">尺码</span>
                     <select id="selid" class="select is-active size-minselect">
-                        <option>法国码39</option>
-                        <option>法国码40</option>
-                        <option>法国码41</option>
-                        <option>法国码42</option>
-                        <option>法国码43</option>
-                        <option>法国码44</option>
-                        <option>法国码45</option>
+                        <option>美国码 XS</option>
+                        <option>美国码 S</option>
+                        <option>美国码 M</option>
+                        <option>美国码 L</option>
+                        <option>美国码 XL</option>
+                        <option>美国码 XXL</option>
                     </select>
                     <span class="select-labet">数量</span>
                     <select id="subselid" class="select is-active size-minselect">
                         <option>1</option>
                         <option>2</option>
                         <option>3</option>
+                        <option>4</option>
+                        <option>5</option>
                     </select>
                 </div>
                 <p class="sizetable">尺码指南</p>
@@ -188,25 +189,26 @@
                 <!-- 点击切换 -->
                 <div class="blocked-out">
                     <ul class="goodsscroll">
-                        <li><img src="./image/floods/goodsscroll01.jpg" alt=""></li>
-                        <li><img src="./image/floods/goodsscroll02.jpg" alt=""></li>
-                        <li><img src="./image/floods/goodsscroll03.jpg" alt=""></li>
-                        <li><img src="./image/floods/goodsscroll04.jpg" alt=""></li>
-                        <li><img src="./image/floods/goodsscroll05.jpg" alt=""></li>
-                        <li><img src="./image/floods/goodsscroll06.jpg" alt=""></li>
+                        <li><img src="./image/obscene/share-box01.png" alt=""></li>
+                        <li><img src="./image/obscene/share-box02.png" alt=""></li>
+                        <li><img src="./image/obscene/share-box03.png" alt=""></li>
+                        <li><img src="./image/obscene/share-box04.png" alt=""></li>
+                        <li><img src="./image/obscene/share-box05.png" alt=""></li>
+                        <li><img src="./image/obscene/share-box06.png" alt=""></li>
                     </ul>
                     <div class="productDetail-largeimg">
                         <span class="tag-hot">
                             <img src="./image/floods/tag01.png" alt="">
 
                         </span>
+                        <img src="./image/obscene/share-box01.png" alt=" " class="st">
+                        <img src="./image/obscene/share-box02.png" alt="">
+                        <img src="./image/obscene/share-box03.png" alt="">
+                        <img src="./image/obscene/share-box04.png" alt="">
+                        <img src="./image/obscene/share-box05.png" alt="">
+                        <img src="./image/obscene/share-box06.png" alt="">
 
-                        <img src="./image/floods/goodsscroll01.jpg" alt="" class="st">
-                        <img src="./image/floods/goodsscroll02.jpg" alt="">
-                        <img src="./image/floods/goodsscroll03.jpg" alt="">
-                        <img src="./image/floods/goodsscroll04.jpg" alt="">
-                        <img src="./image/floods/goodsscroll05.jpg" alt="">
-                        <img src="./image/floods/goodsscroll06.jpg" alt="">
+
                     </div>
                 </div>
             </div>
@@ -217,21 +219,37 @@
             <div class="temp2-tempbox">
                 <div class="temp2-detailsTit">
                     <!--第一个模块左边图-->
-                    <div class="temp2-goodsimgleft "><img src="./image/floods/temp2-goodsimgleft.jpg" alt="商品详情图"></div>
+                    <div class="temp2-goodsimgleft "><img src="./image/obscene/temp2-goodsimgleft.jpg" alt="商品详情图">
+                    </div>
                     <!--第一个模块右边图-->
-                    <div class="temp2-goodsimgrig "><img src="./image/floods/temp2-goodsimgrig.jpg" alt="商品详情图"></div>
+                    <div class="temp2-goodsimgrig "><img src="./image/obscene/temp2-goodsimgrig.jpg" alt="商品详情图"></div>
                     <!--商品详情介绍段落-->
                     <div class="sfdfe">
-                        <p class="goodsIntroduction "><span
-                                style="font-family: 'DINRegular', 'PingFangSC-Regular', 'Helvetica Neue', '微软雅黑', 'Microsoft YaHei', Helvetica, Arial, sans-serif;">SKY</span>
+                        <p class="goodsIntroduction mob-nopadding">“重返复古街头 续写多元潮流” <span
+                                style="font-family: 'DINRegular', 'PingFangSC-Regular', 'Helvetica Neue', '微软雅黑', 'Microsoft YaHei', Helvetica, Arial, sans-serif;">PUMA</span>
                             <span
-                                style="font-family: 'DINRegular', 'PingFangSC-Regular', 'Helvetica Neue', '微软雅黑', 'Microsoft YaHei', Helvetica, Arial, sans-serif;">MODERN</span>
-                            男子篮球鞋以复活节为主题，融入当下潮流元素，焕新演绎经典篮球鞋鞋款。鞋身以迷雾蓝为主色调，搭配多材质拼接鞋面，打造别致休闲的外观，助你随心搭配。</p>
+                                style="font-family: 'DINRegular', 'PingFangSC-Regular', 'Helvetica Neue', '微软雅黑', 'Microsoft YaHei', Helvetica, Arial, sans-serif;">X</span>
+                            <span
+                                style="font-family: 'DINRegular', 'PingFangSC-Regular', 'Helvetica Neue', '微软雅黑', 'Microsoft YaHei', Helvetica, Arial, sans-serif;">THE</span>
+                            <span
+                                style="font-family: 'DINRegular', 'PingFangSC-Regular', 'Helvetica Neue', '微软雅黑', 'Microsoft YaHei', Helvetica, Arial, sans-serif;">HUNDREDS</span>
+                            联名系列从过去30年间街头服饰潮流的演变中汲取创作灵感，以“90年代街头文化社群”为主题，推出分别代表着“校园派”、“运动党”、“派对族”以及“新生代”四种不同街头风格的鞋服，致敬独立而多元的街头文化，诠释肆意街头的潮流态度。
+                            <span
+                                style="font-family: 'DINRegular', 'PingFangSC-Regular', 'Helvetica Neue', '微软雅黑', 'Microsoft YaHei', Helvetica, Arial, sans-serif;">PUMA</span>
+                            <span
+                                style="font-family: 'DINRegular', 'PingFangSC-Regular', 'Helvetica Neue', '微软雅黑', 'Microsoft YaHei', Helvetica, Arial, sans-serif;">X</span>
+                            <span
+                                style="font-family: 'DINRegular', 'PingFangSC-Regular', 'Helvetica Neue', '微软雅黑', 'Microsoft YaHei', Helvetica, Arial, sans-serif;">THE</span>
+                            <span
+                                style="font-family: 'DINRegular', 'PingFangSC-Regular', 'Helvetica Neue', '微软雅黑', 'Microsoft YaHei', Helvetica, Arial, sans-serif;">HUNDREDS</span>
+                            男子<span
+                                style="font-family: 'DINRegular', 'PingFangSC-Regular', 'Helvetica Neue', '微软雅黑', 'Microsoft YaHei', Helvetica, Arial, sans-serif;">T</span>恤采用弹性混纺面料，具有良好触感，穿着舒适。匠心肩袖设计，帮助你自由伸展，轻松出行。
+                        </p>
                         <!--商品详情介绍列表-->
                         <ul class="mobpadding-15">
-                            <li>魔术贴元素搭配经典扁形系带设计，稳妥贴合</li>
-                            <li>牢固的车工走线，提升耐穿性</li>
-                            <li>鞋侧经典跑道元素</li>
+                            <li>圆领设计，便于穿脱</li>
+                            <li>简约版型，可随心搭配</li>
+                            <li>优质衬里镶边，耐洗耐穿</li>
                         </ul>
                         <p class="tips">请在购物前充分查阅<a href="https://cn.puma.com/help?type=kindlyreminder" target="_blank"
                                 rel="noopener">《温馨提示》</a>、<a href="https://cn.puma.com/help?type=returnOfTheRules"
@@ -242,7 +260,29 @@
                 </div>
             </div>
         </div>
-
+        <!-- 观看更多  -->
+        <div class="temp3-tempbox">
+            <div class="temp3-details">
+                <!-- 第三个模块右边图 -->
+                <div class="imgleft">
+                    <img src="./image/obscene/imgleft.jpg" alt="">
+                </div>
+                <div class="textright">
+                    <div>
+                        <h4><span
+                                style="font-family: 'DINRegular', 'PingFangSC-Regular', 'Helvetica Neue', '微软雅黑', 'Microsoft YaHei', Helvetica, Arial, sans-serif;">PUMA</span>
+                            <span
+                                style="font-family: 'DINRegular', 'PingFangSC-Regular', 'Helvetica Neue', '微软雅黑', 'Microsoft YaHei', Helvetica, Arial, sans-serif;">X</span>
+                            <span
+                                style="font-family: 'DINRegular', 'PingFangSC-Regular', 'Helvetica Neue', '微软雅黑', 'Microsoft YaHei', Helvetica, Arial, sans-serif;">THE</span>
+                            <span
+                                style="font-family: 'DINRegular', 'PingFangSC-Regular', 'Helvetica Neue', '微软雅黑', 'Microsoft YaHei', Helvetica, Arial, sans-serif;">HUNDREDS</span>
+                        </h4>
+                        <a href="https://cn.puma.com/men/select/pumaxthehundreds" a="" class="btn btn-red">查看更多</a>
+                    </div>
+                </div>
+            </div>
+        </div>
         <!-- 鞋子轮播图 -->
         <div class="box">
             <h3 class="box-top"> 您可能会喜欢</h3>
@@ -250,7 +290,7 @@
                 <dl id="roll">
                     <dd>
                         <a href="">
-                            <img src="./image/floods/roll01.jpg" alt="">
+                            <img src="./image/obscene/roll01.jpg" alt="">
                             <object data="" type="">
                                 <a href="" class="black-border">
                                     立即选购
@@ -259,16 +299,16 @@
                         </a>
                         <div class="line"></div>
                         <div class="title">
-                            <p>BARI MID </p>
-                            <p>男女同款休闲鞋</p>
+                            <p>RAPPER FC HOME SHIRT REPLICA SS WITH SPONSOR LOGO </p>
+                            <p>曼城19/20赛季主场男子球迷版球衣</p>
                             <p class="currentPrice">
-                                <span>¥499.00</span>
+                                <span>¥419.00</span>
                             </p>
                         </div>
                     </dd>
                     <dd>
                         <a href="">
-                            <img src="./image/floods/roll02.jpg" alt="">
+                            <img src="./image/obscene/roll02.jpg" alt="">
                             <object data="" type="">
                                 <a href="" class="black-border">
                                     立即选购
@@ -277,16 +317,16 @@
                         </a>
                         <div class="line"></div>
                         <div class="title">
-                            <p>BARI MID </p>
-                            <p>男女同款休闲鞋</p>
+                            <p>PUMA X SONIC GRAPHIC TEE </p>
+                            <p>男子短袖T恤</p>
                             <p class="currentPrice">
-                                <span>¥499.00</span>
+                                <span>¥269.00</span>
                             </p>
                         </div>
                     </dd>
                     <dd>
                         <a href="">
-                            <img src="./image/floods/roll03.jpg" alt="">
+                            <img src="./image/obscene/roll03.jpg" alt="">
                             <object data="" type="">
                                 <a href="" class="black-border">
                                     立即选购
@@ -295,16 +335,16 @@
                         </a>
                         <div class="line"></div>
                         <div class="title">
-                            <p>BARI MID </p>
-                            <p>男女同款休闲鞋</p>
+                            <p>DOWNTOWN GRAPHIC TEE </p>
+                            <p>男子短袖T恤</p>
                             <p class="currentPrice">
-                                <span>¥499.00</span>
+                                <span>¥269.00</span>
                             </p>
                         </div>
                     </dd>
                     <dd>
                         <a href="">
-                            <img src="./image/floods/roll04.jpg" alt="">
+                            <img src="./image/obscene/roll04.jpg" alt="">
                             <object data="" type="">
                                 <a href="" class="black-border">
                                     立即选购
@@ -314,10 +354,10 @@
                         </a>
                         <div class="line"></div>
                         <div class="title">
-                            <p>BARI MID </p>
-                            <p>男女同款休闲鞋</p>
+                            <p>DOWNTOWN GRAPHIC TEE </p>
+                            <p>男子短袖T恤</p>
                             <p class="currentPrice">
-                                <span>¥499.00</span>
+                                <span>¥199.00</span>
                             </p>
                         </div>
                     </dd>
@@ -333,7 +373,7 @@
                         </a>
                         <div class="line"></div>
                         <div class="title">
-                            <p>BARI MID </p>
+                            <p>BVB HOME SHIRT REPLICA WITH EVONIK LOGO WITH OPEL LOGO </p>
                             <p>男女同款休闲鞋</p>
                             <p class="currentPrice">
                                 <span>¥499.00</span>
