--- a/cn.puma.www/index.html
+++ b/cn.puma.www/index.html
@@ -141,7 +141,7 @@
         </div>
         <!-- 男子黄色体恤 -->
         <div class="activity" id="main-1">
-            <a href="">
+            <a href="./obscene.html">
                 <img src="./image/index/activity01.jpg" alt="">
             </a>
             <!-- 男子黄色体恤左边导航  -->
