--- a/cn.puma.www/floods.html
+++ b/cn.puma.www/floods.html
@@ -17,7 +17,9 @@
                 <!-- 顶部左边部份 -->
                 <div class="nav-lt">
                     <a href="./index.html" class="nav-lt-fl">
-                        <i class="icon"></i>
+   <img src="./image/index/bt.png" alt="">                        <i class="icon">
+                         
+                        </i>
                     </a>
                     <!-- 移动到文字上 -->
                     <div class="menu">
