--- a/cn.puma.www/index.html
+++ b/cn.puma.www/index.html
@@ -204,7 +204,7 @@
 
         <!-- 蔡依林系列 -->
         <div class="cylHero" id="main-4">
-            <a href="">
+            <a href="./mashup.html">
                 <img src="./image/index/activity04.jpg" alt="">
             </a>
             <!-- 蔡依林系列中间导航  -->
