--- a/cn.puma.www/mashup.html
+++ b/cn.puma.www/mashup.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="./css/amount .css">
+    <link rel="stylesheet" href="./css/mashup.css">
 </head>
 
 <body>
@@ -142,17 +142,17 @@
         <div class="pdp-all">
             <div class="productDetail">
                 <h1>PUMA X TH TEE </h1>
-                <h2>男子短袖T恤</h2>
+                <h2>男女同款训练鞋</h2>
                 <p class="skuCode">
-                    产品编号：<span>59675025</span>
+                    产品编号：<span>19385202</span>
                 </p>
                 <div class="pricebox">
-                    <div class="salePrice">¥399.00</div>
+                    <div class="salePrice">¥969.00</div>
                 </div>
                 <div class="color-box">
                     <ul>
                         <li class="selected">
-                            <img src="./image/amount/selected01.jpg" alt="">
+                            <img src="./image/mashup/selected01.jpg" alt="">
                         </li>
                         <p></p>
                     </ul>
@@ -201,23 +201,23 @@
                 <!-- 点击切换 -->
                 <div class="blocked-out">
                     <ul class="goodsscroll">
-                        <li><img src="./image/amount/share-box01.png" alt=""></li>
-                        <li><img src="./image/amount/share-box02.png" alt=""></li>
-                        <li><img src="./image/amount/share-box03.png" alt=""></li>
-                        <li><img src="./image/amount/share-box04.png" alt=""></li>
-                        <li><img src="./image/amount/share-box05.png" alt=""></li>
-                        <li><img src="./image/amount/share-box06.png" alt=""></li>
+                        <li><img src="./image/mashup/share-box01.png" alt=""></li>
+                        <li><img src="./image/mashup/share-box02.png" alt=""></li>
+                        <li><img src="./image/mashup/share-box03.png" alt=""></li>
+                        <li><img src="./image/mashup/share-box04.png" alt=""></li>
+                        <li><img src="./image/mashup/share-box05.png" alt=""></li>
+                        <li><img src="./image/mashup/share-box06.png" alt=""></li>
                     </ul>
                     <div class="productDetail-largeimg">
                         <span class="tag-hot">
                             <img src="./image/floods/tag01.png" alt="">
                         </span>
-                        <img src="./image/amount/share-box01.png" alt=" " class="st">
-                        <img src="./image/amount/share-box02.png" alt="">
-                        <img src="./image/amount/share-box03.png" alt="">
-                        <img src="./image/amount/share-box04.png" alt="">
-                        <img src="./image/amount/share-box05.png" alt="">
-                        <img src="./image/amount/share-box06.png" alt="">
+                        <img src="./image/mashup/share-box01.png" alt=" " class="st">
+                        <img src="./image/mashup/share-box02.png" alt="">
+                        <img src="./image/mashup/share-box03.png" alt="">
+                        <img src="./image/mashup/share-box04.png" alt="">
+                        <img src="./image/mashup/share-box05.png" alt="">
+                        <img src="./image/mashup/share-box06.png" alt="">
 
 
                     </div>
@@ -230,10 +230,10 @@
             <div class="temp2-tempbox">
                 <div class="temp2-detailsTit">
                     <!--第一个模块左边图-->
-                    <div class="temp2-goodsimgleft "><img src="./image/amount/temp2-goodsimgleft.jpg" alt="商品详情图">
+                    <div class="temp2-goodsimgleft "><img src="./image/mashup/temp2-goodsimgleft.jpg" alt="商品详情图">
                     </div>
                     <!--第一个模块右边图-->
-                    <div class="temp2-goodsimgrig "><img src="./image/amount/temp2-goodsimgrig.jpg" alt="商品详情图"></div>
+                    <div class="temp2-goodsimgrig "><img src="./image/mashup/temp2-goodsimgrig.jpg" alt="商品详情图"></div>
                     <!--商品详情介绍段落-->
                     <div class="sfdfe">
                         <p class="goodsIntroduction mob-nopadding">“重返复古街头 续写多元潮流” <span
@@ -276,7 +276,7 @@
             <div class="temp3-details">
                 <!-- 第三个模块右边图 -->
                 <div class="imgleft">
-                    <img src="./image/amount/imgleft.jpg" alt="">
+                    <img src="./image/mashup/imgleft.jpg" alt="">
                 </div>
                 <div class="textright">
                     <div>
@@ -301,7 +301,7 @@
                 <dl id="roll">
                     <dd>
                         <a href="">
-                            <img src="./image/arder/roll01.jpg" alt="">
+                            <img src="./image/mashup/roll01.jpg" alt="">
                             <object data="" type="">
                                 <a href="" class="black-border">
                                     立即选购
@@ -311,15 +311,15 @@
                         <div class="line"></div>
                         <div class="title">
                             <p>RAPPER FC HOME SHIRT REPLICA SS WITH SPONSOR LOGO </p>
-                            <p>曼城19/20赛季主场男子球迷版球衣</p>
+                            <p>女子训练鞋</p>
                             <p class="currentPrice">
-                                <span>¥419.00</span>
+                                <span>¥469.00</span>
                             </p>
                         </div>
                     </dd>
                     <dd>
                         <a href="">
-                            <img src="./image/arder/roll02.jpg" alt="">
+                            <img src="./image/mashup/roll02.jpg" alt="">
                             <object data="" type="">
                                 <a href="" class="black-border">
                                     立即选购
@@ -329,15 +329,15 @@
                         <div class="line"></div>
                         <div class="title">
                             <p>PUMA X SONIC GRAPHIC TEE </p>
-                            <p>男子短袖T恤</p>
+                            <p>女子训练鞋</p>
                             <p class="currentPrice">
-                                <span>¥269.00</span>
+                                <span>¥969.00</span>
                             </p>
                         </div>
                     </dd>
                     <dd>
                         <a href="">
-                            <img src="./image/arder/roll03.jpg" alt="">
+                            <img src="./image/mashup/roll03.jpg" alt="">
                             <object data="" type="">
                                 <a href="" class="black-border">
                                     立即选购
@@ -347,15 +347,15 @@
                         <div class="line"></div>
                         <div class="title">
                             <p>DOWNTOWN GRAPHIC TEE </p>
-                            <p>男子短袖T恤</p>
+                            <p>女子训练鞋</p>
                             <p class="currentPrice">
-                                <span>¥269.00</span>
+                                <span>¥669.00</span>
                             </p>
                         </div>
                     </dd>
                     <dd>
                         <a href="">
-                            <img src="./image/arder/roll04.jpg" alt="">
+                            <img src="./image/mashup/roll04.jpg" alt="">
                             <object data="" type="">
                                 <a href="" class="black-border">
                                     立即选购
@@ -366,9 +366,9 @@
                         <div class="line"></div>
                         <div class="title">
                             <p>DOWNTOWN GRAPHIC TEE </p>
-                            <p>男子短袖T恤</p>
+                            <p>女子训练鞋</p>
                             <p class="currentPrice">
-                                <span>¥199.00</span>
+                                <span>¥399.00</span>
                             </p>
                         </div>
                     </dd>
@@ -385,7 +385,7 @@
                         <div class="line"></div>
                         <div class="title">
                             <p>BVB HOME SHIRT REPLICA WITH EVONIK LOGO WITH OPEL LOGO </p>
-                            <p>男女同款休闲鞋</p>
+                            <p>女子训练鞋</p>
                             <p class="currentPrice">
                                 <span>¥499.00</span>
                             </p>
