--- a/cn.puma.www/walking.html
+++ b/cn.puma.www/walking.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="./css/amount .css">
+    <link rel="stylesheet" href="./css/walking.css">
 </head>
 
 <body>
@@ -142,17 +142,17 @@
         <div class="pdp-all">
             <div class="productDetail">
                 <h1>PUMA X TH TEE </h1>
-                <h2>男子短袖T恤</h2>
+                <h2>女子休闲鞋</h2>
                 <p class="skuCode">
-                    产品编号：<span>59675025</span>
+                    产品编号：<span>37119502</span>
                 </p>
                 <div class="pricebox">
-                    <div class="salePrice">¥399.00</div>
+                    <div class="salePrice">¥899.00</div>
                 </div>
                 <div class="color-box">
                     <ul>
                         <li class="selected">
-                            <img src="./image/amount/selected01.jpg" alt="">
+                            <img src="./image/walking/selected01.jpg" alt="">
                         </li>
                         <p></p>
                     </ul>
@@ -169,13 +169,6 @@
                         <option>法国码 38.5</option>
                         <option>法国码 39</option>
                         <option>法国码 40</option>
-                        <option>法国码 40.5</option>
-                        <option>法国码 41</option>
-                        <option>法国码 42</option>
-                        <option>法国码 42.5</option>
-                        <option>法国码 43</option>
-                        <option>法国码 44</option>
-                        <option>法国码 45</option>
                     </select>
                     <span class="select-labet">数量</span>
                     <select id="subselid" class="select is-active size-minselect">
@@ -201,23 +194,23 @@
                 <!-- 点击切换 -->
                 <div class="blocked-out">
                     <ul class="goodsscroll">
-                        <li><img src="./image/amount/share-box01.png" alt=""></li>
-                        <li><img src="./image/amount/share-box02.png" alt=""></li>
-                        <li><img src="./image/amount/share-box03.png" alt=""></li>
-                        <li><img src="./image/amount/share-box04.png" alt=""></li>
-                        <li><img src="./image/amount/share-box05.png" alt=""></li>
-                        <li><img src="./image/amount/share-box06.png" alt=""></li>
+                        <li><img src="./image/walking/share-box01.png" alt=""></li>
+                        <li><img src="./image/walking/share-box02.png" alt=""></li>
+                        <li><img src="./image/walking/share-box03.png" alt=""></li>
+                        <li><img src="./image/walking/share-box04.png" alt=""></li>
+                        <li><img src="./image/walking/share-box05.png" alt=""></li>
+                        <li><img src="./image/walking/share-box06.png" alt=""></li>
                     </ul>
                     <div class="productDetail-largeimg">
                         <span class="tag-hot">
                             <img src="./image/floods/tag01.png" alt="">
                         </span>
-                        <img src="./image/amount/share-box01.png" alt=" " class="st">
-                        <img src="./image/amount/share-box02.png" alt="">
-                        <img src="./image/amount/share-box03.png" alt="">
-                        <img src="./image/amount/share-box04.png" alt="">
-                        <img src="./image/amount/share-box05.png" alt="">
-                        <img src="./image/amount/share-box06.png" alt="">
+                        <img src="./image/walking/share-box01.png" alt=" " class="st">
+                        <img src="./image/walking/share-box02.png" alt="">
+                        <img src="./image/walking/share-box03.png" alt="">
+                        <img src="./image/walking/share-box04.png" alt="">
+                        <img src="./image/walking/share-box05.png" alt="">
+                        <img src="./image/walking/share-box06.png" alt="">
 
 
                     </div>
@@ -230,10 +223,10 @@
             <div class="temp2-tempbox">
                 <div class="temp2-detailsTit">
                     <!--第一个模块左边图-->
-                    <div class="temp2-goodsimgleft "><img src="./image/amount/temp2-goodsimgleft.jpg" alt="商品详情图">
+                    <div class="temp2-goodsimgleft "><img src="./image/walking/temp2-goodsimgleft.jpg" alt="商品详情图">
                     </div>
                     <!--第一个模块右边图-->
-                    <div class="temp2-goodsimgrig "><img src="./image/amount/temp2-goodsimgrig.jpg" alt="商品详情图"></div>
+                    <div class="temp2-goodsimgrig "><img src="./image/walking/temp2-goodsimgrig.jpg" alt="商品详情图"></div>
                     <!--商品详情介绍段落-->
                     <div class="sfdfe">
                         <p class="goodsIntroduction mob-nopadding">“重返复古街头 续写多元潮流” <span
@@ -276,7 +269,7 @@
             <div class="temp3-details">
                 <!-- 第三个模块右边图 -->
                 <div class="imgleft">
-                    <img src="./image/amount/imgleft.jpg" alt="">
+                    <img src="./image/walking/imgleft.jpg" alt="">
                 </div>
                 <div class="textright">
                     <div>
