--- a/cn.puma.www/summer.html
+++ b/cn.puma.www/summer.html
@@ -18,7 +18,9 @@
                 <!-- 顶部左边部份 -->
                 <div class="nav-lt">
                     <a href="./index.html" class="nav-lt-fl">
-                        <i class="icon"></i>
+                        <i class="icon">
+                            <img src="./image/index/bt.png" alt="">
+                        </i>
                     </a>
                     <!-- 移动到文字上 -->
                     <div class="menu">
@@ -312,9 +314,9 @@
                 </dl>
             </div>
         </div>
-        <!-- 刘昊然系列 -->
+        <!-- 古力娜扎系列 -->
         <div id="main-2" class=" fullBleedHero">
-            <a href="">
+            <a href="./walking.html">
                 <img src="./image/index/activity002.jpg" alt="">
             </a>
             <div class="activity-right">
